--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+<html>
+    <head>
+        <meta charset="utf-8"/>
+        <title>Woopy &bull; The old time is outdated.</title>
+        <link rel="stylesheet" href="index.css"/>
+    </head>
+    <body>
 
+    </body>
+</html>
