--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
         <link rel="stylesheet" href="index.css"/>
     </head>
     <body>
-
+        <div class="topbar">Woopy, The old time is over.</div>
+    
+        <div class="main">
+            Your custom domain. Free. Forever
+            <form>
+                <input type="text" placeholder="What will be your next domain?"/>
+                <input type="button" value="I Chosen"/>
+            </form>
+        </div>
     </body>
 </html>
