--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>Woopy &bull; The old time is outdated.</title>
+        <title>Woopy &bull; The old time is over.</title>
         <link rel="stylesheet" href="index.css"/>
     </head>
     <body>
         <div class="topbar">Woopy, The old time is over.</div>
     
         <div class="main">
-            Your custom domain. Free. Forever
+            Your custom domain. Free. Forever.
             <form>
                 <input type="text" placeholder="What will be your next domain?"/>
                 <input type="button" value="I Chosen"/>
