--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             Your custom domain. Free. Forever.
             <form>
                 <input type="text" placeholder="What will be your next domain?"/>
-                <input type="button" value="I Chosen"/>
+                <input type="button" value="I Chosen this domain"/>
             </form>
         </div>
     </body>
