--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="index.css"/>
     </head>
     <body>
-        <div class="topbar">Woopy, The old time is over.</div>
+        <div class="topbar">Woopy</div>
     
         <div class="main">
             Your custom domain. Free. Forever.
